Реализована основная функциональность